--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,7 +1,9 @@
 FROM resin/%%RESIN_MACHINE_NAME%%-node
 
-COPY package.json /package.json
+WORKDIR /usr/src/app
+
+COPY package.json ./package.json
 RUN npm install
 
-COPY src/ /usr/src/app
-CMD ["node", "/usr/src/app/main.js"]
+COPY . /usr/src/app
+CMD [ "npm", "start" ]
