--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node
 
 WORKDIR /usr/src/app
 
-RUN apt-get install -y git-all
+RUN apt-get install -y git
 
 COPY package.json ./package.json
 RUN npm install
