--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,9 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:4.4
 
 WORKDIR /usr/src/app
 
+RUN apt-get update
 RUN apt-get install -y git
+RUN apt-get install -y vim
 
 COPY package.json ./package.json
 RUN npm install
