reduced layers for dockerfile

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,9 +2,11 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:4.4
 
 WORKDIR /usr/src/app
 
-RUN apt-get update
-RUN apt-get install -y git
-RUN apt-get install -y vim
+RUN apt-get update \
+    && apt-get install -y \
+        git \
+        vim-enhanced \
+    && apt-get clean
 
 COPY package.json ./package.json
 RUN npm install
