--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prestart": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js"
   },
